# Cotton

./: Cargo.toml  LICENSE  README.md
console/: .env.example  .gitignore  Cargo.toml
console/src/: main.rs
essentials/: Cargo.toml
essentials/src/: lib.rs
essentials/src/config/: mod.rs
essentials/src/logger/: mod.rs
protocol/: Cargo.toml
protocol/src/: io.rs  lib.rs
protocol/src/packets/: mod.rs
protocol/src/packets/incoming/: handshake.rs  mod.rs
server/: Cargo.toml
server/src/: io.rs  lib.rs  tools.rs
