[package]
name = "cotton-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { path = "../essentials", package = "cotton-essentials" }
anyhow = "1.0.56"
pretty-hex = "0.2.1"
log = "0.4.16"
getset = "0.1.2"
nuid = "0.3.2"